created new grid gallery

--- a/gallery.html
+++ b/gallery.html
@@ -67,77 +67,81 @@
         </a>
     </div>
 
-    <section class="row section-gallery">
-        <ul class="photos-gallery clearfix">
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture76.jpg" alt="eyebrows">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/nails3.jpg" alt="nails3">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
+    <div class="container">
+        <div class="gallery-container w-2 h-2">
+            <div class="gallery-item">
+                <div class="image">
                     <img src="resources/img/nails4.jpg" alt="nails4">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture33.jpg" alt="nails5">
-                </figure>
-            </li>
-        </ul>
+                </div>
+                <div class="text">People</div>
+            </div>
+        </div>
 
-        <ul class="photos-gallery clearfix">
-            <li>
-                <figure class="gallery-photo">
+        <div class="gallery-container w-3 h-2">
+            <div class="gallery-item">
+                <div class="image">
                     <img src="resources/img/picture76.jpg" alt="eyebrows">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/nails4.jpg" alt="nails3">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture33.jpg" alt="nails4">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/nailsext.jpg" alt="nails5">
-                </figure>
-            </li>
-        </ul>
+                </div>
+                <div class="text">Nature</div>
+            </div>
+        </div>
 
-        <ul class="photos-gallery clearfix">
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture33.jpg" alt="picture33">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture34.jpg" alt="Burger with cheddar and bacon">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture76.jpg" alt="Healthy baguette with egg and vegetables">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/nails4.jpg" alt="Chicken breast steak with vegetables">
-                </figure>
-            </li>
-        </ul>
-        <div class="xxl-margin-bottom-400"></div>
-    </section>
+        <div class="gallery-container w-1 h-2">
+            <div class="gallery-item">
+                <div class="image">
+                    <img src="resources/img/nailsext.jpg" alt="nails5">
+                </div>
+                <div class="text">Plants</div>
+            </div>
+        </div>
+
+        <div class="gallery-container w-6">
+            <div class="gallery-item">
+                <div class="image">
+                    <img src="resources/img/nails4.jpg" alt="nails4">
+                </div>
+                <div class="text">Hills</div>
+            </div>
+        </div>
+
+        <div class="gallery-container w-1">
+            <div class="gallery-item">
+                <div class="image">
+                    <img src="resources/img/picture33.jpg" alt="nails5">
+                </div>
+                <div class="text">Sport</div>
+            </div>
+        </div>
+
+        <div class="gallery-container w-3">
+            <div class="gallery-item">
+                <div class="image">
+                    <img src="resources/img/nailsext.jpg" alt="nails5">
+                </div>
+                <div class="text">Animal</div>
+            </div>
+        </div>
+
+        <div class="gallery-container w-1">
+            <div class="gallery-item">
+                <div class="image">
+                    <img src="resources/img/nails4.jpg" alt="nails4">
+                </div>
+                <div class="text">Nature</div>
+            </div>
+        </div>
+
+        <div class="gallery-container w-1">
+            <div class="gallery-item">
+                <div class="image">
+                    <img src="resources/img/picture76.jpg" alt="eyebrows">
+                </div>
+                <div class="text">Sea</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="xxl-margin-bottom-400"></div>
     <div id="footer"></div>
 </body>
 
