--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <li><a href="prices.html">Prices</a></li>
                 <li><a href="specialoffers.html">Special Offers</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="galleryYT.html">Gallery YT</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
             </ul>
         </div>
@@ -57,6 +58,7 @@
             <li><a href="prices.html">Prices</a></li>
             <li><a href="specialoffers.html">Special Offers</a></li>
             <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="galleryYT.html">Gallery YT</a></li>
             <li><a href="contactus.html">Contact Us</a></li>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
@@ -74,20 +76,22 @@
         <div class="row">
             <h2>Bem-vinda</h2>
             <p class="long-copy">
-                Na AidaNails você encontrará uma variedade de tratamentos de unhas práticos e de alta qualidade.
-                Para
-                nós, você é mais do que apenas um número, oferecemos apenas serviços que criam unhas bonitas e
-                saudáveis. Você não verá lima excessiva ou corte de cutícula, e levamos tempo para entender a
-                aparência
-                desejada e o que você necessita na hora. Deixe-nos cuidar do teu visual, Obrigada pela Opçao.
+                AidaNails é um espaço dedicado à si, à sua imagem e ao seu bem estar.<br>
+                Situado no Casal São Brás, é um espaço acolhedor, requintado, com facilidade de estacionamento e rede de
+                transportes acessível.<br>
+                Oferecemos aos nossos clientes uma vasta gama de serviços de estética, você encontrará uma variedade de
+                tratamentos de unhas de alta qualidade.<br>
+                Para nós, você é mais do que apenas um número, oferecemos apenas serviços que criam unhas bonitas e
+                saudáveis. <br>
+                Deixe-nos cuidar do teu visual, Obrigada pela Opçao.
             </p>
 
-            <h2>Nossos tratamentos</h2>
+            <h2>Nossos Serviços</h2>
             <p class="long-copy">
-                Só usamos produtos de qualidade para reduzir a poeira e odores fortes. Usamos produtos Semilac com cores
-                de gel UV híbrido altamente pigmentadas e acabamentos de unha criativos.
-                Então relaxe - converse, pegue um conjunto de unhas bonito e delicie-se com um copo de espumante ou um
-                café.
+                Temos ao seu dispor uma vasta gama de serviços que vão torná-la uma diva que são:<br>
+                Unhas de gel, Gelinho,
+                Manicure e Pedicure, Limpeza de pele, Peeling de Diamante, Epilação, Depilação a laser Diodo, Massagens,
+                Maquilhagem, Workshops de maquilhagem, Sobrancelhas e Pestanas, Microblading
             </p>
         </div>
         <div class="row">
