added some text in the nossos servicos section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                 <li><a href="prices.html">Prices</a></li>
                 <li><a href="specialoffers.html">Special Offers</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="galleryYT.html">Gallery YT</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
             </ul>
         </div>
@@ -58,7 +57,6 @@
             <li><a href="prices.html">Prices</a></li>
             <li><a href="specialoffers.html">Special Offers</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="galleryYT.html">Gallery YT</a></li>
             <li><a href="contactus.html">Contact Us</a></li>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
@@ -81,9 +79,10 @@
                 transportes acessível.<br>
                 Oferecemos aos nossos clientes uma vasta gama de serviços de estética, você encontrará uma variedade de
                 tratamentos de unhas de alta qualidade.<br>
-                Para nós, você é mais do que apenas um número, oferecemos apenas serviços que criam unhas bonitas e
-                saudáveis. <br>
-                Deixe-nos cuidar do teu visual, Obrigada pela Opçao.
+                Oferecemos apenas serviços que criam unhas bonitas e
+                saudáveis, garantindo um atendimento personalizado e inovador. <br>
+                A nossa equipa está em constante aprendizagem e formação.
+                Deixe-nos cuidar do teu visual, Obrigada pela Opção.
             </p>
 
             <h2>Nossos Serviços</h2>
