removed fake img and text, added new images, change the menu titles to portuguese

--- a/footer.html
+++ b/footer.html
@@ -20,7 +20,7 @@
                 <p><a href="mailto:aidinha2001@gmail.com" target="_blank">Email: aidinha2001@gmail.com</a></p><br><br>
             </div>
             <p>Telefone: +351 963 254 009</p><br><br>
-            <p><a href="specialoffers.html">Ofertas especiais</a></p><br><br>
+            <p><a href="specialoffers.html">Ofertas espeçiais</a></p><br><br>
             <p><a href="aftercare.html">Aftercare Advice</a></p>
         </div>
         <div class="f-right">
