--- a/gallery.html
+++ b/gallery.html
@@ -73,7 +73,7 @@
                 <div class="image">
                     <img src="resources/img/nails4.jpg" alt="nails4">
                 </div>
-                <div class="text">People</div>
+                <div class=""></div>
             </div>
         </div>
 
@@ -82,7 +82,7 @@
                 <div class="image">
                     <img src="resources/img/picture76.jpg" alt="eyebrows">
                 </div>
-                <div class="text">Nature</div>
+                <div class=""></div>
             </div>
         </div>
 
@@ -91,7 +91,7 @@
                 <div class="image">
                     <img src="resources/img/nailsext.jpg" alt="nails5">
                 </div>
-                <div class="text">Plants</div>
+                <div class=""></div>
             </div>
         </div>
 
@@ -100,7 +100,7 @@
                 <div class="image">
                     <img src="resources/img/nails4.jpg" alt="nails4">
                 </div>
-                <div class="text">Hills</div>
+                <div class=""></div>
             </div>
         </div>
 
@@ -109,7 +109,7 @@
                 <div class="image">
                     <img src="resources/img/picture33.jpg" alt="nails5">
                 </div>
-                <div class="text">Sport</div>
+                <div class=""></div>
             </div>
         </div>
 
@@ -118,7 +118,7 @@
                 <div class="image">
                     <img src="resources/img/nailsext.jpg" alt="nails5">
                 </div>
-                <div class="text">Animal</div>
+                <div class=""></div>
             </div>
         </div>
 
@@ -127,7 +127,7 @@
                 <div class="image">
                     <img src="resources/img/nails4.jpg" alt="nails4">
                 </div>
-                <div class="text">Nature</div>
+                <div class=""></div>
             </div>
         </div>
 
@@ -136,7 +136,7 @@
                 <div class="image">
                     <img src="resources/img/picture76.jpg" alt="eyebrows">
                 </div>
-                <div class="text">Sea</div>
+                <div class=""></div>
             </div>
         </div>
     </div>
