--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             $("#footer").load("footer.html");
         });
     </script>
-    <title>AidaNails</title>
+    <title>AidaNails - Manicures e Pedicures</title>
 </head>
 
 <body>
@@ -39,10 +39,10 @@
 
             <ul class="main-nav js--menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="prices.html">Prices</a></li>
-                <li><a href="specialoffers.html">Special Offers</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="prices.html">Preços</a></li>
+                <li><a href="specialoffers.html">Ofertas &nbsp; Espeçiais</a></li>
+                <li><a href="gallery.html">Galeria</a></li>
+                <li><a href="contactus.html">Estamos &nbsp; Localizados</a></li>
             </ul>
         </div>
     </header>
@@ -54,10 +54,10 @@
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
             <li><a href="index.html">Home</a></li>
-            <li><a href="prices.html">Prices</a></li>
-            <li><a href="specialoffers.html">Special Offers</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="prices.html">Preços</a></li>
+            <li><a href="specialoffers.html">Ofertas &nbsp; Espeçiais</a></li>
+            <li><a href="gallery.html">Galeria</a></li>
+            <li><a href="contactus.html">Estamos &nbsp; Localizados</a></li>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -81,7 +81,7 @@
                 tratamentos de unhas de alta qualidade.<br>
                 Oferecemos apenas serviços que criam unhas bonitas e
                 saudáveis, garantindo um atendimento personalizado e inovador. <br>
-                A nossa equipa está em constante aprendizagem e formação.
+                A nossa equipa está em constante aprendizagem e formação.<br>
                 Deixe-nos cuidar do teu visual, Obrigada pela Opção.
             </p>
 
@@ -152,50 +152,79 @@
         <div class="section-details">
             <p><i class="fas fa-phone"></i> +351 963 254 009</p>
         </div>
-        <ul class="photos-gallery clearfix">
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture76.jpg" alt="eyebrows">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/nails3.jpg" alt="nails3">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/nails4.jpg" alt="nails4">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture33.jpg" alt="nails5">
-                </figure>
-            </li>
-        </ul>
-        <ul class="photos-gallery clearfix">
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture33.jpg" alt="picture33">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture34.jpg" alt="Burger with cheddar and bacon">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/picture76.jpg" alt="Healthy baguette with egg and vegetables">
-                </figure>
-            </li>
-            <li>
-                <figure class="gallery-photo">
-                    <img src="resources/img/nails4.jpg" alt="Chicken breast steak with vegetables">
-                </figure>
-            </li>
-        </ul>
+        <div class="container">
+            <div class="gallery-container w-2 h-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="resources/img/nailsbrown.jpeg" alt="nailsbrown">
+                    </div>
+                    <div class=""></div>
+                </div>
+            </div>
+
+            <div class="gallery-container w-2 h-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="resources/img/picture76.jpg" alt="eyebrows">
+                    </div>
+                    <div class=""></div>
+                </div>
+            </div>
+
+            <div class="gallery-container w-2 h-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="resources/img/nailspink.jpeg" alt="nailspink">
+                    </div>
+                    <div class=""></div>
+                </div>
+            </div>
+
+            <div class="gallery-container w-3 h-3">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="resources/img/nailsyellow.jpeg" alt="nailsyellow">
+                    </div>
+                    <div class=""></div>
+                </div>
+            </div>
+
+            <div class="gallery-container w-2 h-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="resources/img/picture33.jpg" alt="nails5">
+                    </div>
+                    <div class=""></div>
+                </div>
+            </div>
+
+            <div class="gallery-container w-2 h-3">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="resources/img/sombracelhas.jpeg" alt="sombracelhas">
+                    </div>
+                    <div class=""></div>
+                </div>
+            </div>
+
+            <div class="gallery-container w-3 h-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="resources/img/nails4.jpg" alt="nails4">
+                    </div>
+                    <div class=""></div>
+                </div>
+            </div>
+
+            <div class="gallery-container w-1 h-5">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="resources/img/picture76.jpg" alt="eyebrows">
+                    </div>
+                    <div class=""></div>
+                </div>
+            </div>
+        </div>
         <div class="section-details"></div>
     </section>
 
