--- a/contactus.html
+++ b/contactus.html
@@ -40,10 +40,10 @@
 
             <ul class="main-nav js--menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="prices.html">Prices</a></li>
-                <li><a href="specialoffers.html">Special Offers</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="prices.html">Preços</a></li>
+                <li><a href="specialoffers.html">Ofertas &nbsp; Espeçiais</a></li>
+                <li><a href="gallery.html">Galeria</a></li>
+                <li><a href="contactus.html">Estamos &nbsp; Localizados</a></li>
             </ul>
         </div>
     </header>
@@ -56,10 +56,10 @@
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
             <li><a href="index.html">Home</a></li>
-            <li><a href="prices.html">Prices</a></li>
-            <li><a href="specialoffers.html">Special Offers</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
+            <li><a href="prices.html">Preços</a></li>
+            <li><a href="specialoffers.html">Ofertas &nbsp; Espeçiais</a></li>
+            <li><a href="gallery.html">Galeria</a></li>
+            <li><a href="contactus.html">Estamos &nbsp; Localizados</a></li>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
