--- a/header.html
+++ b/header.html
@@ -6,10 +6,10 @@
 
             <ul class="main-nav js--menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="prices.html">Prices</a></li>
-                <li><a href="specialoffers.html">Special Offers</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li><a href="prices.html">Preços</a></li>
+                <li><a href="specialoffers.html">Ofertas &nbsp; Espeçiais</a></li>
+                <li><a href="gallery.html">Galeria</a></li>
+                <li><a href="contactus.html">Estamos &nbsp; Localizados</a></li>
             </ul>
             <button class="hamburger">&#9776;</button>
             <button class="cross">&#735;</button>
